"Add preventDefault to stop content shift on button click"

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ display:flex;
     display:flex;
     flex-direction:column;
     gap:1rem;
-    padding:2rem;
+    padding-left: 2.5rem;
   
 }
 
